check.log
   Compiling pyenv-gui v0.1.22 (C:\Users\Roy\Desktop\AI\pyenv\pyenv-native\crates\pyenv-gui)
error[E0603]: module `venv` is private
   --> crates\pyenv-gui\src\main.rs:140:30
    |
140 |     let report = pyenv_core::venv::cmd_venv_create(&ctx, &base_version, &name, false, false);
    |                              ^^^^ private module
    |
note: the module `venv` is defined here
   --> crates\pyenv-core\src\lib.rs:20:1
    |
 20 | mod venv;
    | ^^^^^^^^
help: consider importing this function instead
    |
140 -     let report = pyenv_core::venv::cmd_venv_create(&ctx, &base_version, &name, false, false);
140 +     let report = pyenv_core::cmd_venv_create(&ctx, &base_version, &name, false, false);
    |

error[E0603]: module `venv` is private
   --> crates\pyenv-gui\src\main.rs:150:30
    |
150 |     let report = pyenv_core::venv::cmd_venv_delete(&ctx, &spec, true);
    |                              ^^^^ private module
    |
note: the module `venv` is defined here
   --> crates\pyenv-core\src\lib.rs:20:1
    |
 20 | mod venv;
    | ^^^^^^^^
help: consider importing this function instead
    |
150 -     let report = pyenv_core::venv::cmd_venv_delete(&ctx, &spec, true);
150 +     let report = pyenv_core::cmd_venv_delete(&ctx, &spec, true);
    |

For more information about this error, try `rustc --explain E0603`.
error: could not compile `pyenv-gui` (bin "pyenv-gui") due to 2 previous errors
